--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <body>
         <header>
             <div class="main">
+                <div class="logo">
+                    <img src ="logo.png">
+                </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">blala</a></li>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Sign up</a></li>
                 </ul>
+            </div>
+            <div class="title">
+                <h1>AIR ENERGY</h1>
+            </div>
+            <div class="button">
+                <a href="#" class="btn">WATCH NOW</a>
+                <a href="#" class="btn">LEARN MORE</a>
             </div>
         </header>
     </body>
