--- a/signup.html
+++ b/signup.html
@@ -1,29 +1,53 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="CSS/signup.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-      <ul>
-        <li ><a href="index.html">Home</a></li>
-        <li><a href="index1.html">blala</a></li>
-          <li ><a href="aboutus.html">About Us</a></li>
-        <li class="active"><a href="signup.html">Contact</a></li>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Sign up</title>
+        <link rel="stylesheet" type="text/css" href="signup.css">
+</head>
+<body>
+<div class="logo">
+                    <img src ="logo.png">
+                </div>
+<ul>
+        <li ><a href="Homepage.html">Home</a></li>
+        <li><a href="More Info.html">More Info</a></li>
+         <li ><a href="aboutus.html">About Us</a></li>
+        <li class="active"><a href="signup.html">Sign up</a></li>
       </ul>
-<div class="contact-section">
-  <div class="border"></div>
-  <form class="contact-form" action="contactform.php" method="post">
-    <input type="text" class="contact-form-text" placeholder="Your name">
-    <input type="email" class="contact-form-text" placeholder="Your email">
-    <input type="text" class="contact-form-text" placeholder="Your phone">
-    <textarea class="contact-form-text" placeholder="Your message"></textarea>
-    <input type="submit" class="contact-form-btn" value="Send">
+	  <br>
+	  <br>
+	  <br>
+	  <br>
+	  <br>
+	  <br>
+	  
+<h3>Contact Form</h3>
+
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+	<option value="choose" name="choose">Choose</option>
+      <option value="australia">Bulgaria</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
   </form>
 </div>
 
-
-  </body>
+</body>
 </html>
+
